--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
-/* div{
-  background-color: rgba(blue, blue, blue, 0.5) ;
-}
+ div{
+  background-color: #ededed;
+}/*
 d
 
 registerUser = () => {
